# cookiecutter-astrodata-squeleton

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/docs/latex/: index.doctree  latex_setup.doctree
.doctrees/docs/sphinx_quickstart/: index.doctree  sphinx_getting_started.doctree  sphinx_quickstart.doctree
.doctrees/docs/sphinx_quickstart/sphinx_advanced/: convert_doc_to_rst.doctree  dupplicate_warning.doctree  google_analytics_sphinx.doctree  index.doctree
.doctrees/docs/templates/: ds_template.doctree
.doctrees/docs/welcome/: onboarding.doctree
.doctrees/docs/workflow/: best_practices.doctree  docker_cicd.doctree
.github/workflows/: deploy-docs.yml
_sources/docs/sphinx_quickstart/: sphinx_getting_started.rst.txt
_sources/docs/sphinx_quickstart/sphinx_advanced/: dupplicate_warning.rst.txt  google_analytics_sphinx.rst.txt
_sources/docs/templates/: ds_template.rst.txt
_sources/docs/workflow/: best_practices.rst.txt
data-science/: README.md  cookiecutter.json
data-science/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
data-science/{{ cookiecutter.repo_name }}/: .cz.yaml  .dockerignore  .editorconfig  .env.example  .env.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data-science/{{ cookiecutter.repo_name }}/.github/: PULL_REQUEST_TEMPLATE.md
data-science/{{ cookiecutter.repo_name }}/.github/ISSUE_TEMPLATE/: bug_report.md
data-science/{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml
data-science/{{ cookiecutter.repo_name }}/.gitlab/issue_templates/: cr_workshop.md
data-science/{{ cookiecutter.repo_name }}/.streamlit/: config.toml
data-science/{{ cookiecutter.repo_name }}/app/: streamlit_app.py
data-science/{{ cookiecutter.repo_name }}/app/assets/: style.css
data-science/{{ cookiecutter.repo_name }}/data/: .dvcignore
data-science/{{ cookiecutter.repo_name }}/dockerfiles/: Dockerfile
data-science/{{ cookiecutter.repo_name }}/notebooks/: 01_eda_template.ipynb
data-science/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/api/: main.py  middlewares.py  routes.py
data-science/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/api/routers/: base.py  greetings.py  system.py
data-science/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/core/utils/: __init__.py  paths.py  version.py
data-science/{{ cookiecutter.repo_name }}/tests/unit_test/: test_api.py  test_middleware.py  test_paths.py  test_version_fallback.py
docs/astrodata_squeleton_documentation/: .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  ReadMe.MD  conf.py  index.rst  pyproject.toml  staticwebapp.config.json
docs/astrodata_squeleton_documentation/.github/workflows/: documentation.yaml
docs/astrodata_squeleton_documentation/.gitlab/issue_templates/: CR_Workshop.md
docs/astrodata_squeleton_documentation/.gitlab/merge_request_templates/: MR.md
docs/astrodata_squeleton_documentation/_static/pdf/: page-background.docx
docs/astrodata_squeleton_documentation/docs/latex/: latex_setup.rst
docs/astrodata_squeleton_documentation/docs/sphinx_quickstart/: index.rst  sphinx_quickstart.rst
docs/astrodata_squeleton_documentation/docs/sphinx_quickstart/sphinx_advanced/: convert_doc_to_rst.rst
docs/astrodata_squeleton_documentation/docs/welcome/: introduction.rst  onboarding.md  quickstart.rst
docs/astrodata_squeleton_documentation/docs/workflow/: docker_cicd.rst
docs/latex/: index.html  latex_setup.html
docs/sphinx_quickstart/: index.html  sphinx_getting_started.html  sphinx_quickstart.html
docs/sphinx_quickstart/sphinx_advanced/: convert_doc_to_rst.html  dupplicate_warning.html  google_analytics_sphinx.html  index.html
docs/templates/: ds_template.html
docs/welcome/: onboarding.html
docs/workflow/: best_practices.html  docker_cicd.html
sphinx-docs/: cookiecutter.json
sphinx-docs/hooks/: post_gen_project.py
sphinx-docs/{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  LICENSE  Makefile  ReadMe.MD  conf.py  index.rst  pyproject.toml  staticwebapp.config.json
sphinx-docs/{{ cookiecutter.repo_name }}/.github/workflows/: documentation.yaml
sphinx-docs/{{ cookiecutter.repo_name }}/.gitlab/issue_templates/: Bug.md  Project_Comittee.md  Task.md
sphinx-docs/{{ cookiecutter.repo_name }}/_static/pdf/: page-background.docx
sphinx-docs/{{ cookiecutter.repo_name }}/docs/latex/: index.rst  latex_setup.rst
sphinx-docs/{{ cookiecutter.repo_name }}/docs/sphinx_quickstart/: sphinx_getting_started.rst  sphinx_quickstart.rst
sphinx-docs/{{ cookiecutter.repo_name }}/docs/sphinx_quickstart/sphinx_advanced/: convert_doc_to_rst.rst  dupplicate_warning.rst  google_analytics_sphinx.rst  index.rst
