[project]
name = "cookiecutter-astrodata-squeleton"
version = "0.1.0"
license = "MIT"
description = "Cookiecutter templates for Astrodata data-science and Sphinx documentation projects."
readme = "README.md"
authors = [{ name = "Cao Tri DO", email = "caotri.do@astrodata.fr" }]
maintainers = [{ name = "Cao Tri DO", email = "caotri.do@astrodata.fr" }]
keywords = ["python", "cookiecutter", "astrodata", "data-science", "sphinx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.0"

dependencies = ["commitizen>=4.8.3"]

[dependency-groups]
dev = [
    "gitingest>=0.1.5",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version = "0.1.0"
version_files = ["pyproject.toml:^version ="]
bump_message = "chore(release): bump version $current_version → $new_version"
update_changelog_on_bump = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"
changelog_title = "# Changelog \n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),\nand this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n## [Unreleased]\n"
changelog_message_template = """

## {{version}} - {{date}}

{{#each commits}}
- {{message}}
{{/each}}

"""

[project.urls]
homepage = "https://github.com/malganis35/cookiecutter-astrodata-squeleton"
